--- a/credit-calculator index.html
+++ b/credit-calculator index.html
@@ -468,7 +468,7 @@
             resultText += `\nOffer Code: ${offerCode}\n`;
         }
 
-        resultText += `\nTotal Credit Owed: ${totalCredit.toFixed(2)}\nSSent to ST.`;
+        resultText += `\nTotal Credit Owed: ${totalCredit.toFixed(2)}\nTagged: fpt-cc-payment-refund-query.`;
         document.getElementById('result').textContent = resultText;
     }
 
