--- a/credit-calculator index.html
+++ b/credit-calculator index.html
@@ -142,7 +142,7 @@
 
 <h4><strong>8. Copy Results</strong></h4>
 
-<p>To copy the results to your clipboard, click the <strong>Copy</strong> button. You can then paste the results directly into OPTIONS and send this over to Systems Tray to process your customer's e-voucher.</p>
+<p>To copy the results to your clipboard, click the <strong>Copy</strong> button. Then, paste the results directly into OPTIONS and tag fpt-cc-payment-refund-query so FPT can process your customer's e-voucher or refund.</p>
 
 <h4><strong>9. Delete Row</strong></h4>
 
